--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,26 @@ p + strong {
 a:not(.no-highlight) {
   background-color: #719e07;
 }
+
+[rel="external"] {
+  background-color: #2694d8;
+}
+
+li ol: first-child {
+  color: #719e47;
+}
+
+li ol: last-child {
+  color: #2aa198;
+}
+
+.types > li:nth-child(odd) {
+  background-color: #657ba3;
+}
+.types > li:nth-child(even) {
+  background-color: #586e75;
+}
+
+.types > li:nth-child(3) {
+  background-color: #d04b16
+}
