--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,11 @@ a:not(.no-highlight) {
   background-color: #2694d8;
 }
 
-[li ol: first-child] {
+ol li:first-child {
   color: #719e47;
 }
 
-[li ol: last-child] {
+ol li:last-child {
   color: #2aa198;
 }
 
